# rust-armodel

./: Cargo.toml  README.md
src/: lib.rs
src/m2/autosar_templates/: autosar_top_level_structure.rs
src/m2/autosar_templates/generic_structure/general_template_classes/: ar_package.rs  identifier.rs
