[package]
name = "armodel"
version = "0.1.0"
authors = ["melodypapa <melodypapa@github.com>"]
repository = "https://github.com/melodypapa/rust_armodel"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
#libxml = "0.2.16"
xml-rs = "0.8.3"